--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,64 @@
 {
   "version": 1,
   "projects": {
+    "router": {
+      "projectType": "library",
+      "root": "libs/router",
+      "sourceRoot": "libs/router/src",
+      "prefix": "reactiveangular",
+      "architect": {
+        "build-package": {
+          "builder": "@nrwl/angular:package",
+          "options": {
+            "tsConfig": "libs/router/tsconfig.lib.json",
+            "project": "libs/router/ng-package.json",
+            "buildableProjectDepsInPackageJsonType": "dependencies"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/router/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "build": {
+          "builder": "@nrwl/workspace:run-commands",
+          "options": {
+            "parallel": false,
+            "commands": [
+              {
+                "command": "ng run router:build-package"
+              },
+              {
+                "command": "yarn tsc -p libs/router/tsconfig.schematics.json"
+              }
+            ]
+          },
+          "configurations": {
+            "production": {}
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/router/tsconfig.lib.json",
+              "libs/router/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/router/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/router/jest.config.js",
+            "setupFile": "libs/router/src/test-setup.ts",
+            "passWithNoTests": true
+          },
+          "outputs": ["coverage/libs/router"]
+        }
+      },
+      "schematics": {}
+    },
     "example-app": {
       "projectType": "application",
       "schematics": {},
@@ -72,6 +130,16 @@
             "browserTarget": "example-app:build"
           }
         },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/example-app/tsconfig.app.json",
+              "apps/example-app/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/example-app/**/*"]
+          }
+        },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
@@ -98,6 +166,13 @@
             "production": {
               "devServerTarget": "example-app:serve:production"
             }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["apps/example-app-e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**", "!apps/example-app-e2e/**/*"]
           }
         }
       }
@@ -173,6 +248,16 @@
             "browserTarget": "recursive-routes:build"
           }
         },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/recursive-routes/tsconfig.app.json",
+              "apps/recursive-routes/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/recursive-routes/**/*"]
+          }
+        },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
@@ -199,6 +284,13 @@
             "production": {
               "devServerTarget": "recursive-routes:serve:production"
             }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["apps/recursive-routes-e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**", "!apps/recursive-routes-e2e/**/*"]
           }
         }
       }
@@ -274,6 +366,16 @@
             "browserTarget": "responsive-app:build"
           }
         },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/responsive-app/tsconfig.app.json",
+              "apps/responsive-app/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/responsive-app/**/*"]
+          }
+        },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
@@ -300,6 +402,13 @@
             "production": {
               "devServerTarget": "responsive-app:serve:production"
             }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["apps/responsive-app-e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**", "!apps/responsive-app-e2e/**/*"]
           }
         }
       }
@@ -375,6 +484,16 @@
             "browserTarget": "route-restrictions:build"
           }
         },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/route-restrictions/tsconfig.app.json",
+              "apps/route-restrictions/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/route-restrictions/**/*"]
+          }
+        },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
@@ -402,56 +521,32 @@
               "devServerTarget": "route-restrictions:serve:production"
             }
           }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["apps/route-restrictions-e2e/tsconfig.e2e.json"],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/route-restrictions-e2e/**/*"
+            ]
+          }
         }
       }
-    },
-    "router": {
-      "projectType": "library",
-      "root": "libs/router",
-      "sourceRoot": "libs/router/src",
-      "prefix": "reactiveangular",
-      "architect": {
-        "build-package": {
-          "builder": "@nrwl/angular:package",
-          "options": {
-            "tsConfig": "libs/router/tsconfig.lib.json",
-            "project": "libs/router/ng-package.json",
-            "buildableProjectDepsInPackageJsonType": "dependencies"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "libs/router/tsconfig.lib.prod.json"
-            }
-          }
-        },
-        "build": {
-          "builder": "@nrwl/workspace:run-commands",
-          "options": {
-            "parallel": false,
-            "commands": [
-              {
-                "command": "ng run router:build-package"
-              },
-              {
-                "command": "yarn tsc -p libs/router/tsconfig.schematics.json"
-              }
-            ]
-          },
-          "configurations": {
-            "production": {}
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "options": {
-            "jestConfig": "libs/router/jest.config.js",
-            "setupFile": "libs/router/src/test-setup.ts",
-            "passWithNoTests": true
-          },
-          "outputs": ["coverage/libs/router"]
-        }
-      },
-      "schematics": {}
     }
-  }
+  },
+  "cli": {
+    "defaultCollection": "@nrwl/angular",
+    "analytics": false
+  },
+  "schematics": {
+    "@nrwl/angular:application": {
+      "unitTestRunner": "jest",
+      "e2eTestRunner": "cypress"
+    },
+    "@nrwl/angular:library": {
+      "unitTestRunner": "jest"
+    }
+  },
+  "defaultProject": "router"
 }
