--- a/libs/router/tsconfig.lib.json
+++ b/libs/router/tsconfig.lib.json
@@ -14,6 +14,6 @@
     "enableResourceInlining": true,
     "enableIvy": false
   },
-  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts"],
+  "exclude": ["src/test-setup.ts", "**/*.spec.ts"],
   "include": ["**/*.ts"]
 }
